# PIAE

./: README.md  docker-compose.yml
Backend/: Dockerfile  pyproject.toml  requirements.txt
Backend/app/: main.py
Backend/app/api/: auth.py  deps.py  feedback.py  health.py  projects.py  users.py
Backend/app/core/: config.py
Backend/app/db/: gridfs.py  mongo.py
Backend/app/domain/: enums.py  models.py
Backend/app/repositories/: feedback.py  projects.py  translator_languages.py  users.py
Backend/app/security/: jwt.py  passwords.py
Backend/app/services/: assignment.py  emailer.py  otp.py  project_review.py  project_service.py
Backend/scripts/: create_dev_users.py
Backend/tests/: test_assignment_service.py  test_auth_login.py  test_auth_otp_login.py  test_project_creation_api.py  test_project_repository_integration.py  test_project_service.py  test_user_registration.py
Frontend/: Dockerfile  db.sqlite3  manage.py  mypy.ini  requirements.txt
Frontend/frontend/: asgi.py  settings.py  urls.py  wsgi.py
Frontend/locale/cs/LC_MESSAGES/: django.mo  django.po
Frontend/static/css/: app.css
Frontend/static/js/: projects_sort.js
Frontend/templates/: base.html
Frontend/templates/web/: create_project.html  home.html  languages.html  login.html  otp_setup.html  project_detail_admin.html  project_detail_customer.html  project_detail_translator.html  projects.html  projects_admin.html  register.html
Frontend/web/: admin_forms.py  apps.py  backend_client.py  customer_forms.py  forms.py  language_forms.py  project_forms.py  translator_forms.py  views.py
(+1 files in other folders)
