[project]
name = "piae-backend"
version = "0.1.0"
description = "PIAE backend (FastAPI + MongoDB)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "motor>=3.6",
  "email-validator>=2.2",
  "PyJWT>=2.8",
  "python-multipart>=0.0.9",
  "pyotp>=2.9",
  "passlib>=1.7.4",
  "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
ignore_missing_imports = true
